...
                <placeholder placeholderIdentifier="IBFirstResponder" id="YXP-OY-uZ6" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <viewController id="AX5-Tq-PcQ" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="jhl-RL-3OY">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Page 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fyf-Vo-OfL">
                                <rect key="frame" x="161" y="422.66666666666669" width="53" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
                            <constraint firstItem="Fyf-Vo-OfL" firstAttribute="centerX" secondItem="wp7-Mp-kFe" secondAttribute="centerX" id="9hW-Ou-Lew"/>
                            <constraint firstItem="Fyf-Vo-OfL" firstAttribute="centerY" secondItem="wp7-Mp-kFe" secondAttribute="centerY" id="aAm-3K-FJv"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="wp7-Mp-kFe"/>
                    </view>
                    <navigationItem key="navigationItem" title="Page 2" id="vFv-n7-yVX">
                        <barButtonItem key="backBarButtonItem" title="Back" id="XRV-wZ-MwC"/>
                        <barButtonItem key="rightBarButtonItem" title="Next" id="xZY-ad-t4F">
                            <connections>
                                <segue destination="JT5-dP-rSl" kind="show" id="IEK-Kg-IJF"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </viewController>
...
            <objects>
                <viewController id="JT5-dP-rSl" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5A9-o8-oRy">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Page 3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hgY-9L-Mdg">
                                <rect key="frame" x="160.66666666666666" y="422.66666666666669" width="54" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yCV-D3-uFS">
...
            <objects>
                <viewController id="KBJ-Ge-aCn" customClass="Page1ViewController" customModule="SlideKitTestApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="X5L-io-o8x">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Page 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkJ-fx-xiM">
                                <rect key="frame" x="162" y="422.66666666666669" width="51" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
