...
                    <view key="view" contentMode="scaleToFill" id="yrp-bh-3C4">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nei-zx-1Ij">
                                <rect key="frame" x="148" y="396" width="78" height="30"/>
                                <state key="normal" title="Put 'em up!"/>
                                <connections>
                                    <segue destination="8Sl-kS-nZy" kind="presentation" modalPresentationStyle="formSheet" modalTransitionStyle="coverVertical" id="XfR-gM-LqC"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
